Remove inline:block from the site logo.  Prevents the site logo from floating on top of lower conent when a site wide alert message is visible

--- a/src/main/webapp/style/app.css
+++ b/src/main/webapp/style/app.css
@@ -1526,7 +1526,6 @@ span.sep {
 }
 
 #header_logo {
-    display: inline-block;
     max-width: 240px;
     max-height: 120px;
     position: relative;
